Ispravljeno akcentovanje koda i sitne greske pri kucanju

--- a/seminarski.bib
+++ b/seminarski.bib
@@ -46,7 +46,7 @@ year = {2014}
 @misc{microsoft_.net,
 title = {{.NET framework}},
 note = {on-line at: \url{https://dotnet.microsoft.com/learn/dotnet/what-is-dotnet}},
-author = {Microsoft}
+author = {Microsoft},
 year = {2019}
 }
 
@@ -60,28 +60,28 @@ author = {ReactiveX}
 @misc{apm,
 title = {{Asynchronous Programming Model (APM)}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/standard/asynchronous-programming-patterns/asynchronous-programming-model-apm}},
-author = {Microsoft}
+author = {Microsoft},
 year = {2019}
 }
 
 @misc{cli,
 title = {{Get started with F\# with the .NET Core CLI}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/fsharp/get-started/get-started-command-line}},
-author = {Microsoft}
+author = {Microsoft},
 year = {2019}
 }
 
 @misc{msil,
 title = {{Assemblies in the Common Language Runtime (MSIL)}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/framework/app-domains/assemblies-in-the-common-language-runtime}},
-author = {Microsoft}
+author = {Microsoft},
 year = {2019}
 }
 
 @misc{microsoft_c,
 title = {{C\# Guide}},
 note = {on-line at: \url{https://docs.microsoft.com/en-us/dotnet/csharp/index}},
-author = {Microsoft}
+author = {Microsoft},
 year = {2019}
 }
 
@@ -143,8 +143,6 @@ year = {2019}
 
 @misc{ionide,
 title = {{Ionide}},
-note = {on-line at: \url{http://ionide.io/}},
-%author = {{Microsoft}},
-%year = {2019}
+note = {on-line at: \url{http://ionide.io/}}
 }
 
